finished adding scrolly button to all pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,9 +23,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="/">Home</a></li>
-											<li><a href="generic.html">About Me</a></li>
-											<li><a href="elements.html">Projects</a></li>
-											<li><a href="#">Contact Me</a></li>
+											<li><a class = "more scrolly" href="#one">About Me</a></li>
+											<li><a class = "more scrolly" href="#three">Projects</a></li>
+											<li><a class = "more scrolly" href="#cta">Contact Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -56,7 +56,7 @@
                   OpenWeb, an app incubator that brings together highly motivated students to develop tech projects to collaborate, design, and learn together.
                   <br />
                   <br />
-                  Outside of developing, I am a judge for the Boston Debate League, am a food fanatic, and love playing and watching basketball. Feel free to send me a message if any of those pique your interests. 
+                  Outside of developing, I am a judge for the Boston Debate League, am a food fanatic, and love playing and watching basketball. 
               </p>
 							</header>
 							<ul class="icons major">
@@ -69,30 +69,6 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="/public/images/images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="/public/images/images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="/public/images/images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
@@ -110,27 +86,27 @@
 								<li class="icon solid fa-laptop">
 									<h3>Agriworks</h3>
                   <p>Developing a web application that will mitigate the agrarian resource crisis in India</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/agriworks/" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-code">
 									<h3>YelpCamp</h3>
                   <p>A NodeJS application that allows users to rate, share, and purchase custom campgrounds</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/yelpcamp/" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>SilentParty</h3>
                   <p>An iOS application that synchronizes music to create a party atmosphere for users.</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/silentparty/" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-heart">
 									<h3>MuchToDo</h3>
                   <p>An iOS application that customizes a users reminders.</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/muchtodo/" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-flag">
 									<h3>QuickStop</h3>
                   <p>A web application that optimizes users traveling in Boston.</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/quickstop/" class="button fit">View Project</a>
 								</li>
 							</ul>
 						</div>
@@ -140,12 +116,11 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+                <h2>Get In Touch</h2>
+                <p>If anything interested you, feel free to hit me up!</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="mailto: gskang@bu.edu" class="button fit primary">Email Me</a></li>
 							</ul>
 						</div>
 					</section>
