--- a/views/fakenews.ejs
+++ b/views/fakenews.ejs
@@ -26,12 +26,12 @@
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
-                                            <ul>
-                                                    <li><a href="/">Home</a></li>
-                                                    <li><a href="generic.html">About Me</a></li>
-                                                    <li><a href="elements.html">Projects</a></li>
-                                                    <li><a href="#">Contact Me</a></li>
-                                            </ul>
+											<ul>
+													<li><a href="/">Home</a></li>
+													<li><a class = "more scrolly" href="/#one">About Me</a></li>
+													<li><a class = "more scrolly" href="/#three">Projects</a></li>
+													<li><a class = "more scrolly" href="/#cta">Contact Me</a></li>
+												</ul>
 									</div>
 								</li>
 							</ul>
@@ -53,9 +53,9 @@
                                                 The extension uses a Natural Language Processing Model built with Google Cloud to compare the headline to known Fake News headlines. 
                                                 It also uses a PageRank API to check the relevance of the website and offers articles from other sources relating to the keywords of the headline. 
                                 </p>
-                                <a href="#" class="button fit project-button">View Project Demo</a>
+                                <a href="https://devpost.com/software/fakenews-chrome-plugin" target = "_blank" class="button fit project-button">View Project Demo</a>
                                 
-                                <a href="#" class="button fit project-button">View Code</a>
+                                <a href="https://github.com/zachbodi/FakeNewsWebPlugin" target = "_blank" class="button fit project-button">View Code</a>
 
 							</div>
 						</section>
