--- a/views/home.ejs
+++ b/views/home.ejs
@@ -128,7 +128,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Gagandeep Kang</li><li>Inspired by: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
